--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@types/jquery": "^3.3.22",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
@@ -35,8 +34,10 @@
     "@angular/cli": "~6.1.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/bootstrap": "^4.1.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.22",
     "@types/node": "~8.9.4",
     "@types/three": "^0.92.23",
     "codelyzer": "~4.2.1",
@@ -50,6 +51,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": ">=2.8.0 <2.10"
   }
 }
